--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
   AWS_REGION: 'us-east-1'
-  AWS_ACCOUNT_ID: 'xxxxxxxxxx'
+  AWS_ACCOUNT_ID: '601458261050'
   ECR_REPOSITORY: 'bluewave-app'
   APP_NAME: 'bluewave-app'
   SSH_USERNAME: 'ec2-user'
@@ -103,7 +103,7 @@ jobs:
 
 
 
-  deploy:
+  deploy to dev:
     needs: build
     runs-on: ubuntu-latest
     permissions:
